fixed error and try to push

--- a/css/beanroaster.css
+++ b/css/beanroaster.css
@@ -100,3 +100,13 @@ footer {
     top: 177px;
     z-index: 0;
 }
+
+#roast_color{
+    width: 80%
+}
+#button{
+    width: 20%;
+    text-align: center;
+}#Comments{
+     text-align: center;
+ }
